# glSceneTests

./: .gitignore  CMakeLists.txt  README.md  build.ps1  shaders
apps/: CMakeLists.txt
apps/example_app/: CMakeLists.txt  main.cpp
apps/test_app/: CMakeLists.txt  app.cpp
apps/test_app/src/: app.cpp
apps/test_app/src/scenes/: click_bounce.cpp  click_bounce.hpp  ground_scene.cpp  ground_scene.hpp
assets/: checkered_cube.fbx  cube_object.mtl  plane.mtl  sphere_object.mtl
cmake/: FindGLEW.cmake  FindSDL2.cmake  FindSDL2.cmake.bak  FindSOIL2.cmake  Findassimp.cmake  assign_source_group.cmake  gl00Config.cmake.in  list_all_properties.cmake  msvc_cpp_latest.cmake
include/: CMakeLists.txt  common.hpp  engine.hpp  mesh.hpp  mesh_instance.hpp  model.hpp  scene.hpp  scene_manager.hpp  scene_object.hpp  shader.hpp
include/gl00/: camera.hpp  common.hpp  engine.hpp  engine_parts.hpp  gl00.hpp  mesh.hpp  mesh_single.hpp  model.hpp  model_single.hpp  scene.hpp  scene_manager.hpp  scene_object.hpp  shader.hpp
include/gl00/gizmos/: scene_object.hpp  state_solver.hpp
include/glad/: glad.h
include/scenes/: ball_scene.hpp  bezier_scene.hpp  instance_test.hpp  lighting_scene.hpp  shader_scene.hpp  texture_scene.hpp
src/: CMakeLists.txt  app.cpp  camera.cpp  camera.hpp  common.hpp  engine.cpp  engine.hpp  engine_parts.hpp  glad.c  glutils.cpp  glutils.hpp  helicopter_scene.cpp  helicopter_scene.hpp  key_codes.hpp  mesh.cpp  mesh.hpp  mesh_single.cpp  mesh_single.hpp  model.cpp  model.hpp  model_single.cpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  scene_object.cpp  sdl_engine.hpp  shader.cpp  shader.hpp  test_scene.hpp
src/gizmos/: basic_scene_object.hpp  camera.cpp  lighting.hpp  line.hpp  scene_object.cpp  shapes.hpp  state_solver.cpp  state_solver.hpp
src/scenes/: CMakeLists.txt  ball_scene.cpp  ball_scene.hpp  bezier_scene.cpp  bezier_scene.hpp  blank.cpp  blank.hpp  helicopter_scene.cpp  helicopter_scene.hpp  instance_test.cpp  instance_test.hpp  lighting_scene.cpp  lighting_scene.hpp  line_test.cpp  line_test.hpp  scattering_scene.cpp  scattering_scene.hpp  shader_scene.cpp  shader_scene.hpp  test_scene.cpp  test_scene.hpp  test_signal.cpp  test_signal.hpp  texture_scene.cpp  texture_scene.hpp
src/sdl/: sdl_helper.cpp  sdl_helper.hpp
src/shaders/: ball.fs.glsl  ball.vs.glsl  basic.fs.glsl  basic.vs.glsl  bezier-point.fs.glsl  bezier-point.vs.glsl  bezier.fs.glsl  bezier.vs.glsl  depthmap.fs.glsl  depthmap.vs.glsl  fragment.glsl  helicopter_fragment.glsl  helicopter_vertex.glsl  instance.vs.glsl  light.fs.glsl  light.vs.glsl  line.fs.glsl  line.vs.glsl  scattering.fs.glsl  scattering.vs.glsl  shader_scene.fs.glsl  shader_scene.vs.glsl  test.fs.glsl  test.vs.glsl  test_scene.fs.glsl  test_scene.vs.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex.glsl
src/test/: Eye.fbx  Eye.mtl  amanita_a.mtl  amanita_bump.tif  amanita_color.tif  amanita_normals.tif  amanita_specular.tif  b_sphere.mtl  b_sphere2.mtl  blob_textured.mtl  cone.mtl  face_textured.mtl  file2-pTorus1.iff  ground_plane.mtl  light.mb  light_object.mtl  multiple_objects.fbx  multiple_objects.mtl  ramp1-pTorus1.iff  specular_test.fbx  sphere_object.mtl  sphere_textured.fbx  sphere_textured.mtl  test_model.cpp  test_specular.mtl  two_spheres.mtl
src/test/.mayaSwatches/: light.mb.swatches
src/test_app/: app.cpp
test/: test_scene_instance.cpp  test_scene_object.cpp  test_sdl.cpp
test/unit/: CMakeLists.txt  test_model.cpp  test_state_solver.cpp
tests/: CMakeLists.txt  test_model.cpp  test_pointer.cpp  test_resources.cpp  test_scene_object.cpp  test_scenes.cpp
